# chatterbox-pipeline

./: .cursorignore  .gitignore  CLEANUP_MAIN_PLAN.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  PLAN_pygoruut_integration.md  PLAN_tag-phonemizer_integration.md  README.md  SPEAKER_SYSTEM.md  TASK_EXECUTOR_UNIFICATION_PLAN.md  TECHNICAL_OVERVIEW.md  TTS-reference-text-English.docx  TTS-reference-text-English.docx:Zone.Identifier  TTS-reference-text-English.md  batch_report_20250620_003445.txt  batch_report_20250620_005344.txt  batch_report_20250620_005839.txt  batch_report_20250620_005937.txt  batch_report_20250620_010012.txt  batch_report_20250620_010615.txt  batch_report_20250620_011146.txt  batch_report_20250620_012337.txt  batch_report_20250620_012747.txt  batch_report_20250620_013125.txt  batch_report_20250620_013142.txt  batch_report_20250620_014030.txt  batch_report_20250620_014459.txt  candidate_quality_scorer_diagram.md  cleanunet_implementation_prompt.md  copy_candidates.py  cursor2_woher_kommen_die_config_werte.md  dev-requirements.txt  feature_user_candidate_manager.txt  feature_user_candidate_manager_plan.md  german_example_tts_with_havok.py  improve quality with chatterbox sampler.txt  logger-output-table.md  mermaid_diagram.md  mypy.ini  notes_gradio_UI_thougts.md  (+30 more)
.cursor/rules/: activate-venv-fist-always.mdc  agent-terminal-commands.mdc  code-review-and-testing.mdc  git-commit.mdc  id-terminals.mdc  language.mdc
.github/workflows/: ci.yml
Chatterbox-CleanUNet/: README.md  enhance_training_artifacts.py  requirements.txt  setup.py  simple_artifact_removal.py
Chatterbox-CleanUNet/config/: dataset_config.yaml  inference_config.yaml  model_config.yaml  train_config.yaml
Chatterbox-CleanUNet/scripts/: enhance_audio.py  enhance_simple.py  evaluate_model.py  filter_training_data.py  prepare_dataset.py  train.py  train_simple.py
config/: all_voices.yaml  backes_reads_column.yaml  default_config.yaml  example1.yaml  example2.yaml  example_job_config.yaml  hal9000.yaml  jeremiahs.yaml  job1_config.yaml  job2.yaml  job2_config.yaml  job3_config.yaml  mixed_job_config.yaml  phoneme_mappings_minimal.yaml  pilcrowe.yaml  radio-broadcast.yaml  simple_example.yaml  speakers_example.yaml  t1.yaml  t10.yaml  t11.yaml  t12.yaml  t13.yaml  t14.yaml  t15.yaml  t16.yaml  t17.yaml  t18.yaml  t19.yaml  t2.yaml  t20.yaml  t3.yaml  t4.yaml  t5.yaml  t6.yaml  t7.yaml  t8.yaml  t9.yaml  test.php  voice_test.yaml
config/_backup/: t10.yaml  t12.yaml  t15.yaml  t16.yaml  t18.yaml  t2.yaml  t7.yaml
docs/: CONTRIBUTING.md  PERSISTENT_CACHE.md  SPEAKER_SYSTEM.md  TECHNICAL_OVERVIEW.md  candidate_quality_scorer_diagram.md  normalization.md
scripts/: check_ci.py  fix_formatting.py  fix_formatting_interactive.py  fix_imports.py  fix_python.py  run_chunker.py  test_basic_pipeline.py  test_chatterbox_finetuning_concept.py  test_german_text_with_chatterbox.py  test_integration.py  test_menu_orchestrator.py  test_mock_pipeline.py  test_model_cache.py  test_postprocessing_pipeline.py  test_postprocessing_simple.py  test_regenerate_final.py  test_speaker_config_merging.py  test_task_system.py  test_validation.py  test_validation_pipeline.py  test_whisper.py
src/: cbpipe.py  main.py
src/chunking/: __init__.py  base_chunker.py  chunk_validator.py  spacy_chunker.py
src/config/: __init__.py  github_config.py
src/generation/: __init__.py  audio_processor.py  batch_processor.py  candidate_manager.py  candidate_manager_backup-before-refactor.py  model_cache.py  selection_strategies.py  tts_generator.py
src/git_ci_config/: __init__.py  github_config.py
src/pipeline/: __init__.py  batch_executor.py  batch_task_executor.py  job_manager.py  job_manager_backup-before-refactor.py  job_manager_wrapper.py  task_executor.py  task_executor_backup-before-refactor.py  task_executor_original.py  task_orchestrator.py  user_candidate_manager.py
src/postprocessing/: __init__.py  audio_cleaner.py  auto_editor_wrapper.py  noise_analyzer.py  normalization.py
src/preprocessor/: __init__.py  language_tag_processor.py  text_preprocessor.py
src/utils/: __init__.py  audio_utils.py  (+5 more)
tests/: test_menu_orchestrator.py  test_speaker_config_merging.py
(+66 files in other folders)
